k8s-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: devops.rishabhsingh007.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
    # - host: www.devops.rishabhsingh007.com
    #   http:
    #     paths:
    #       - path: /api
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: backend-svc
    #             port:
    #               number: 5000
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: frontend-svc
    #             port:
    #               number: 80
  tls:
    - hosts:
        - devops.rishabhsingh007.com
        - www.devops.rishabhsingh007.com
      secretName: rks007-co-tls
